--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,18 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "fastapi>=0.116.1",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.28",
+    "langchain-groq>=0.3.7",
+    "langgraph>=0.6.6",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.2",
+    "pdfplumber>=0.11.7",
+    "psycopg2-binary>=2.9.10",
+    "python-multipart>=0.0.20",
+    "requests>=2.32.5",
+    "sqlmodel>=0.0.24",
+    "streamlit>=1.49.0",
+]
