--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-community>=0.3.28",
     "langchain-groq>=0.3.7",
+    "langchain-openai>=0.3.32",
     "langgraph>=0.6.6",
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
